--- a/rref/templates/rref/home.html
+++ b/rref/templates/rref/home.html
@@ -4,8 +4,8 @@
     <div class="jumbotron">
         <h1 class="display-4">Welcome</h1>
         <p class="lead">
-            This is <b>user registration and login system</b> build with django which is
-            a Python-based free and open-source web framework that follows the model–template–views architectural pattern.
+            This is <b>a way to compute your reduced row Eschelon problems</b> built with django which is
+            a Python-based web framework.
         </p>
         <hr class="my-4">
         <p class="lead">
