debugging and fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 
 <!-- Our own css file.  Note how we can link directly here and not -->
 <!-- write any routing code in the Flask application. -->
-<link rel="stylesheet" href="/static/simple.css" />
+<link rel="stylesheet" href="/static/css/simple.css" />
 
 <!-- <style>
     /* Additional styling for the tiles display */
