fixed js linking

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
  crossorigin="anonymous">
 </script>
 
-<script src="{{ url_for('static', filename='js/entry.js') }}"></script>
+<script src="{{ url_for('static', filename='/js/entry.js') }}"></script>
 
 
 <!-- Our own css file.  Note how we can link directly here and not -->
