--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,11 @@
         <input id="cols" name="cols" type="text" width="15"
                autocomplete="off" autofocus />
 
-        <button type="button" id="reset" class="btn btn-default">Reset</button>
+
+        <button type="button" id="submit" class="btn btn-default">submit</button>
+
+
+        <button type="button" id="reset" class="btn btn-default"> reset </button>
       </form>
     </div>
   </div>
