changing to matrix nomenclature not display

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
 
         <button type="button" id="reset" class="btn btn-default"> reset </button>
         <div class="row">
-          <div id="display" class="col-xs-12 text-center" style="margin-top: 20px;"></div>
+          <div id="matrix" class="col-xs-12 text-center" style="margin-top: 20px;"></div>
         </div>
       </form>
     </div>
