--- a/templates/index.html
+++ b/templates/index.html
@@ -34,12 +34,12 @@
  crossorigin="anonymous">
 </script>
 
-<!-- Our own js file.  Note how we can link directly here and not -->
-<!-- write any routing code in the Flask application. -->
+<!-- Our own js file. -->
 <script src="{{ url_for('static', filename='/js/entry.js') }}"></script>
 
 
-<!-- Our own css file. -->
+<!-- Our own css file.   Note how we can link directly here and not-->
+ <!-- write any routing code in the Flask application. -->
 <link rel="stylesheet" href="/static/css/simple.css" />
 
 
@@ -55,6 +55,7 @@
 
   <div class="row">
     <div class="col-xs-12 text-center">
+      
       <form id="entry">
         <label for="rows">rows:</label>
         <input id="rows" name="rows" type="text" width="15"
@@ -72,6 +73,11 @@
         <div class="row">
           <div id="matrix" class="col-xs-12 text-center" style="margin-top: 20px;"></div>
         </div>
+
+        <button id="toggleMode" class="btn btn-info" style="display: none;">
+        fraction <!-- default togglebtn starts as fractional-->
+        </button>
+
       </form>
     </div>
   </div>
