trying to change alert to message

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,8 +71,11 @@
 
         <button type="button" id="reset" class="btn btn-default"> reset </button>
         <div class="row">
+
           <div id="matrix" class="col-xs-12 text-center" style="margin-top: 20px;"></div>
         </div>
+        
+        <div id="error-message"></div>
 
         <button id="toggleMode" class="btn btn-info" style="display: none;">
         fraction <!-- default togglebtn starts as fractional-->
