trying to fix matrix box styling

--- a/static/css/simple.css
+++ b/static/css/simple.css
@@ -33,7 +33,7 @@
 }
 
 /* Input field styling */
-#rows, #cols {
+#rows, #cols, #matrix-box input{
     font-size: 1.2rem;
     padding: 0.5rem;
     border: 2px solid #dee2e6;
@@ -45,7 +45,7 @@
     display: inline-block;
 }
 
-#rows:focus, #cols:focus {
+#rows:focus, #cols:focus, #matrix-box:focus {
     border-color: #80bdff;
     outline: none;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
