--- a/static/css/simple.css
+++ b/static/css/simple.css
@@ -104,10 +104,14 @@
     margin: 0;
     text-align: center;
     border: none !important;
+    width: auto;
+    
 }
 
 #matrix {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+
     padding: 0;
     margin: 0 auto;
 }
