--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -74,12 +74,12 @@
     /* Center tiles */
 }
 
-/* Tile image styling */
+/* Tile image styling 
 #tiles img {
     margin: 5px;
     transition: transform 0.2s;
     filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.1));
-}
+}I dont think I am using this*/
 
 #tiles img:hover {
     transform: scale(1.1);
@@ -102,6 +102,8 @@
 .table-not-bordered td {
     padding: 0;
     margin: 0;
+    min-height: 50px;
+    min-width: 50px;
     text-align: center;
     border: none !important;
     width: auto;
@@ -111,7 +113,7 @@
 #matrix {
     display: flex;
     justify-content: center;
-
+    width: 75%;
     padding: 0;
     margin: 0 auto;
 }
