--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -94,16 +94,16 @@
 /* Matrix Table Styling */
 .table-not-bordered {
     border-collapse: seperate;
-    border-spacing: 0;
-    margin: 0 auto;
-    padding: 0;
+    border-spacing: 5px;
+    margin: 5px;
+    padding: 5px;
 }
 
 .table-not-bordered td {
-    padding: 0;
-    margin: 0;
+    padding: 5px;
+    margin: 5px;
     min-height: 50px;
-    min-width: 50px;
+    min-width: 40px;
     text-align: center;
     border: none !important;
     width: auto;
@@ -114,8 +114,8 @@
     display: flex;
     justify-content: center;
     width: 75%;
-    padding: 0;
-    margin: 0 auto;
+    padding: 5px;
+    margin: 5px;
 }
 
 /* Matrix Input Styling */
@@ -129,7 +129,7 @@
     text-align: center;
     transition: border-color 0.3s;
     display: block;
-    margin: 0 auto;
+    margin: 5px;
     padding: 0.3rem;
 
 }
