--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -95,13 +95,13 @@
 .table-not-bordered {
     border-collapse: separate;
     border-spacing: 5px;
-    margin: 5px;
+    margin: 5px auto;
     padding: 5px;
 }
 
 .table-not-bordered td {
     padding: 5px;
-    margin: 5px;
+    margin: 5px auto;
     min-height: 50px;
     min-width: 40px;
     text-align: center;
@@ -115,7 +115,7 @@
     justify-content: center;
     width: 75%;
     padding: 5px;
-    margin: 5px;
+    margin: 5px auto;
 }
 
 /* Matrix Input Styling */
