--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -88,16 +88,18 @@
 /* Matrix Table Styling */
 .table-not-bordered {
     border-collapse: separate;
-    border-spacing: 5px;
-    margin: 5px auto;
-    padding: 5px;
+    display: grid;
+    place-items: center;
+    border-spacing: 2px;
+    margin: 2px auto;
+    padding: 2px;
 }
 
 .table-not-bordered td {
-    padding: 5px;
-    margin: 5px auto;
-    min-height: 50px;
-    min-width: 40px;
+    padding: 2px;
+    margin: 2px auto;
+    min-height: 40px;
+    min-width: 30px;
     text-align: center;
     border: none !important;
     width: auto;
@@ -107,22 +109,22 @@
 #matrix {
     display: grid;
     place-items: center;
-    padding: 5px;
-    margin: 5px auto;
+    padding: 2px;
+    margin: 2px auto;
 }
 
 /* Matrix Input Styling */
 .matrix-box {
-    width: 50px !important;
-    height: 40px;
+    width: 40px !important;
+    height: 30px;
     font-size: 1.2rem;
     padding: 0.5rem;
     border: 2px solid #dee2e6;
     border-radius: 4px;
     text-align: center;
     transition: border-color 0.3s;
-    display: block;
-    margin: 5px;
+    display: grid;
+    margin: 2px;
     padding: 0.3rem;
 
 }
