--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -119,6 +119,11 @@
 
 /* Button Styling */
 #submit, #reset {
+
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    border: 2px solid #dee2e6;
+    border-radius: 4px;
     background-color: #007bff;
     color: white;
     border: none;
