--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -132,3 +132,10 @@
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
 }
+
+
+#submit:focus, #reset:focus, #toggleMode:focus {
+    border-color: #80bdff;
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+}
