new color for button

--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -122,9 +122,9 @@
 
     font-size: 1.2rem;
     padding: 0.5rem;
-    border: 2px solid #dee2e6;
+    border: 2px solid #ffffff;
     border-radius: 4px;
-    background-color: #80bdff;
+    background-color: #1484fc;
     height: 40px;
     width: 50px;
     margin: 2px auto;
