--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -122,13 +122,13 @@
 
     font-size: 1.2rem;
     padding: 0.5rem;
-    border: 2px solid #ffffff;
+    border: 2px solid #dcdcdc;
     border-radius: 4px;
-    background-color: #1484fc;
+    background-color: rgba(0, 123, 255, .25);
     height: 40px;
     width: 50px;
     margin: 2px auto;
-    color: rgb(238, 236, 236);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
 }
