--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -111,7 +111,7 @@
 
 }
 
-.matrix-box:focus {
+.matrix-box:focus, #submit:focus, #reset:focus, #toggleMode:focus {
     border-color: #80bdff;
     outline: none;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
@@ -129,13 +129,4 @@
     width: 50px;
     margin: 2px auto;
     color: rgb(255, 255, 255);
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.2s;
-}
-
-
-#submit:focus, #reset:focus, #toggleMode:focus {
-    border-color: #80bdff;
-    outline: none;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
 }
