--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -132,6 +132,6 @@
     text-align: center;
 }
 
-#submit + #reset {
-  margin-left: 2px; /* Adds 2px space to the left of "Reset" */
+#submit, #reset {
+  margin-left: 4px; /* Adds 2px space to the left of "Reset" */
 }
