larger changes for button spacing

--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -132,6 +132,8 @@
     text-align: center;
 }
 
-#submit, #reset {
-  margin-left: 4px; /* Adds 2px space to the left of "Reset" */
+.button-group {
+  display: flex;
+  gap: 2px; /* Consistent 2px spacing */
+  justify-content: center;
 }
