--- a/home/static/css/simple.css
+++ b/home/static/css/simple.css
@@ -88,6 +88,13 @@
     
 }
 
+.input-overlay-container {
+  position: relative;
+  display: inline-block;
+  width: 50px;  /* Match the input size */
+  height: 33px; /* Match the input height */
+}
+
 #matrix {
     display: grid;
     place-items: center;
@@ -95,7 +102,18 @@
     margin: 2px auto;
 }
 
-/* Matrix Input Styling */
+
+
+.matrix-box {
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  background: transparent;
+  position: relative;
+  z-index: 2;
+}
+
+/* Matrix Input Styling 
 .matrix-box {
     width: 50px !important;
     height: 33px;
@@ -109,7 +127,7 @@
     margin: 2px;
     padding: 0.3rem;
 
-}
+}*/
 
 .matrix-box:focus, #submit:focus, #reset:focus, #toggleMode:focus {
     border-color: #80bdff;
@@ -128,12 +146,21 @@
 /* LaTeX Overlay Styling */
 .latex-overlay {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  position: relative;        /* flows like normal content */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   text-align: center;
   font-size: 1em;
   color: #444;
   margin-top: 4px;           
-  pointer-events: none;      /* ensures user can still select/click input */
+  pointer-events: none;     
+  display: flex;
+  align-items: center;
+  justify-content: center;
+z-index: 1;
+
 }
 
 /* Button Styling */
