--- a/home/static/css/simple_light.css
+++ b/home/static/css/simple_light.css
@@ -103,27 +103,22 @@
 }
 
 
-
+/* Matrix Input Styling */
 .matrix-box {
-  width: 100%;
-  height: 100%;
-  font-size: 16px;
-  background: transparent;
-  position: relative;
-  z-index: 2;
-}
-
-/* Matrix Input Styling 
-.matrix-box {
-    width: 50px !important;
+    position: relative;
+    z-index: 2;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    font-size: 12px;
+    /*width: 50px !important;
     height: 33px;
-    font-size: 1.2rem;
+    font-size: 1.2rem;*/
     padding: 0.5rem;
     border: 2px solid #dee2e6;
     border-radius: 4px;
     text-align: center;
     transition: border-color 0.3s;
-    display: grid;
     margin: 2px;
     padding: 0.3rem;
 
@@ -143,10 +138,16 @@
     color: #495057;
 }
 
+
+.input-overlay-container{
+    position: relative;
+}
+
 /* LaTeX Overlay Styling */
 .latex-overlay {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: absolute;
+  pointer-events: none;
   top: 0;
   left: 0;
   width: 100%;
@@ -159,7 +160,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-z-index: 1;
+  z-index: 1;
 
 }
 
