--- a/home/static/css/simple_light.css
+++ b/home/static/css/simple_light.css
@@ -88,12 +88,14 @@
     
 }
 
+
 .input-overlay-container {
   position: relative;
   display: inline-block;
   width: 50px;  /* Match the input size */
   height: 33px; /* Match the input height */
 }
+
 
 #matrix {
     display: grid;
@@ -108,12 +110,9 @@
     position: relative;
     z-index: 2;
     background: transparent;
-    width: 100%;
-    height: 100%;
-    font-size: 12px;
-    /*width: 50px !important;
+    width: 50px !important;
     height: 33px;
-    font-size: 1.2rem;*/
+    font-size: 1.2rem;
     padding: 0.5rem;
     border: 2px solid #dee2e6;
     border-radius: 4px;
@@ -130,17 +129,27 @@
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
 }
 
-.mjx-chtml {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-
-    font-size: 1.2rem;
-    /* Ensure MathJax text is readable */
-    color: #495057;
+.katex, .katex-display {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-size: 1.2rem !important;
+  color: #495057 !important;
 }
 
+/* Additional KaTeX-specific refinements */
+.katex .katex-mathml {
+  /* Hide MathML fallback */
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
 
-.input-overlay-container{
-    position: relative;
+.katex .katex-html {
+  /* Ensures proper alignment */
+  display: inline-block;
 }
 
 /* LaTeX Overlay Styling */
