--- a/home/static/css/simple_light.css
+++ b/home/static/css/simple_light.css
@@ -10,15 +10,14 @@ body {
     top: 20px;
     right: 20px;
     padding: 5px 10px;
-    color: #f9fafb;
     font-size: 1.2rem;
     padding: 1rem;
-    border: 2px solid #dcdcdc;
+    border: 2px solid #dcdcdcb8;
     border-radius: 4px;
     display: inline-flex;
-    background-color:  #fffefe9e;
-    height: 33px;
-    width: 49px;
+    background-color:  #fffefef7;
+    height: 28px;
+    width: 45px;
     margin: 4px auto;
     color: rgba(255, 255, 255, 0.097);
     text-align: center;
@@ -136,8 +135,7 @@ body {
 
 }*/
 
-.matrix-box:focus, #submit:focus, #reset:focus, #light-dark:focus,
-#toggleMode:focus, #latex-input:focus, .input-overlay-container:focus {
+.matrix-box:focus, #submit:focus, #reset:focus, #light-dark:focus,#toggleMode:focus, #latex-input:focus, .input-overlay-container:focus {
     border-color: #80bdff;
     outline: none;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
