--- a/home/static/css/simple_dark.css
+++ b/home/static/css/simple_dark.css
@@ -5,17 +5,34 @@ body {
 }
 
 #light-dark{
-    color: #f0f0f0;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 5px 10px;
+    font-size: 1.2rem;
+    padding: 1rem;
+    border: 2px solid #dcdcdc7c;
+    border-radius: 3px;
+    display: inline-flex;
+    background-color:  #383838f7;
+    height: 28px;
+    width: 45px;
+    margin: 8px auto;
+    color: rgba(220, 220, 220, 0.834);
+    text-align: center;
+    align-items: center;
 }
+
 
 .container {
     max-width: 600px;
     margin: 2rem auto;
     /* Center horizontally */
     padding: 1rem;
-    background-color: #313131;
+    background-color: #1f1f1f;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
     /* Center text content */
 }
+
