--- a/home/static/css/simple_dark.css
+++ b/home/static/css/simple_dark.css
@@ -36,3 +36,50 @@ body {
     /* Center text content */
 }
 
+ #rows, #cols {
+    background-color: #2f2f2f;  /* Gray background */
+    border-color: #969696;
+    color: #ffffff;
+}
+
+
+
+/* Dark mode styles */
+.matrix-box {
+    background-color: #2f2f2f;
+    border-color: #969696;
+    color: #ffffff;
+}
+
+katex, .katex-display {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-size: 1.2rem !important;
+  color: #495057 !important;
+}
+
+/* Dark mode */
+.katex, .katex-display {
+  color: #e9ecef !important;
+}
+
+/* Additional KaTeX-specific refinements */
+.katex .katex-mathml {
+  /* Hide MathML fallback */
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+
+.katex .katex-html {
+  /* Ensures proper alignment */
+  display: inline-block;
+}
+
+/* Dark mode */
+.latex-overlay {
+  color: #e9ecef;
+}
