--- a/calc/static/css/calc_dark.css
+++ b/calc/static/css/calc_dark.css
@@ -4,6 +4,12 @@ body {
     font-family: Arial, sans-serif;
 }
 
+h1 {
+    font-size: 1.5rem;  
+    margin-bottom: 0.5rem; /* Adjust spacing if needed */
+}
+
+
 #light-dark{
     position: fixed;
     top: 20px;
@@ -71,7 +77,7 @@ body {
     border: 2px;
     border-radius: 4px;
     text-align: center;
-    transition: border-color 0.3s;
+    /*transition: border-color 0.3s;*/
     margin: 2px;
     padding: 0.3rem;
 
@@ -109,4 +115,23 @@ katex, .katex-display {
 /* Dark mode */
 .latex-overlay {
   color: #e9ecef;
+}
+
+.op-button {
+    background-color: #29d1f29f;
+    border: 2px solid #3eb8ff55;
+    border-radius: 4px;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 1rem;
+    margin: 0.5rem;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.3s, border-color 0.3s;
+  
+}
+
+.op-button:focus {
+    border-color: #80bdff;
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
 }
