--- a/calc/static/css/calc_light.css
+++ b/calc/static/css/calc_light.css
@@ -132,7 +132,15 @@ h1 {
 }
 
 .op-button {
-
+    background-color: #29d1f29f;
+    border: 2px solid #3eb8ff55;
+    border-radius: 4px;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 1rem;
+    margin: 0.5rem;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.3s, border-color 0.3s;
   
 }
 
