--- a/calc/static/css/calc_dark.css
+++ b/calc/static/css/calc_dark.css
@@ -63,6 +63,10 @@ h1 {
     width: auto;
 }
 
+.table-not-bordered td:nth-last-child(2) {
+    border-right: 2px solid red !important;
+}
+
 /* Dark mode styles */
 .matrix-box {
     background-color: #2f2f2f;
