--- a/calc/static/css/calc_dark.css
+++ b/calc/static/css/calc_dark.css
@@ -64,7 +64,8 @@ h1 {
 }
 
 .table-not-bordered td:nth-last-child(2) {
-    border-right: 2px solid red !important;
+    border-right: 3 px dotted  rgba(255, 17, 0, .6) !important;
+    border-radius: 1px;
 }
 
 /* Dark mode styles */
@@ -122,6 +123,16 @@ katex, .katex-display {
   color: #e9ecef;
 }
 
+#btn-abt {
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    min-height: 24px;
+    min-width: 200px;
+    color: #f0f0f0;
+    text-align: center;
+} 
+
 .op-button {
     background-color: #29d1f29f;
     border: 2px solid #3eb8ff55;
@@ -132,7 +143,7 @@ katex, .katex-display {
     margin: 0.5rem;
     padding: 0.5rem 1rem;
     transition: background-color 0.3s, border-color 0.3s;
-  
+    z-index: 2;
 }
 
 .op-button:focus, .op-input:focus {
